Fix responsive scrollbar for large screen

--- a/src/pages/basePage/styles.module.scss
+++ b/src/pages/basePage/styles.module.scss
@@ -1,8 +1,12 @@
 @import 'src/styles/functions';
 
 .basePage {
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
   &__content {
     padding: space(l1);
+    flex-grow: 1;
   }
 
   &__noPadding {
