--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,7 +20,7 @@ body {
   font-weight: fontWeight(medium);
 
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow-x: hidden;
   overflow-y: auto;
@@ -39,6 +39,7 @@ body {
 #root {
   width: 100%;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 #modalRoot {
